[tool.poetry]
name = "decoder"
version = "0.0.1"
description = "LNbits decoder extension"
authors = ["Bitkarrot <info@bitkarrot.co>"]

[tool.poetry.dependencies]
python = "^3.10 | ^3.9 | ^3.8 | ^3.7"
lnbits = "^0.12.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
flake8 = { version = "^6.0.0", python = ">=3.8.1" }
pylint = { version = "^2.15.10", python = ">=3.7.2" }

[tool.isort]
profile = "black"

[tool.pyright]
include = [
  "."
]

[tool.mypy]
files = "."

[tool.pytest.ini_options]
addopts = "--durations=1"
testpaths = [
  "tests"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "all"
enable = [
    "assignment-from-none",
    "chained-comparison",
    "consider-merging-isinstance",
    "consider-using-dict-comprehension",
    "consider-using-dict-items",
    "consider-using-f-string",
    "consider-using-in",
    "dangerous-default-value",
    "inconsistent-return-statements",
    "lost-exception",
    "pointless-string-statement",
    "simplifiable-if-statement",
    "super-init-not-called",
    "superfluous-parens",
    "unused-variable",
    "use-list-literal",
    "useless-else-on-loop",
    "useless-object-inheritance",
]

[tool.pylint.MASTER]
fail-under = 10.0
jobs = 0
